Jonathan's second round

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -30,7 +30,7 @@ For any patient, this is concerning but not uncommon, especially with regards to
 
 Another motivation was the rising incidence of chronic renal disease and the associated costs to society. The estimated Canadian prevalence of chronic renal disease in 2007-2009 was 12.5\% and 3.1\% of the population has grade 3-5 disease \citep{arora2013prevalence}. \citep{anachronistic}, described how despite the rising significance of renal disease worldwide, practitioner awareness remains low. These authors argued that care would need to be led by primary care and integrated into general chronic condition management to avoid the "catastrophic" costs associated with the management of advanced chronic renal disease management \citep{jha2013chronic}. Kerr et al. estimated the cost of renal disease at 1.44-1-45 billion Pound Stirling in 2009-2010 for the UK alone \citep{underestimating}.\\
 
-This paper will outline the development and implementation of the application. "RenalQ" was the final working name given to the product. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the District Health Board (DHB) but was able to consider each patient within their context.  Users described the application as making a positive change to their work processes, and many would like the methodology expanded to other tests. RenalQ was found to have a statistically significant impact on practitioner's' laboratory testing of renal disease, following its introduction.\\
+This paper will outline the development and implementation of the application which was given "RenalQ" as its final working name. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the District Health Board (DHB) but was able to consider each patient within their context.  Users described the application as making a positive change to their work processes, and many would like the methodology expanded to other tests. RenalQ was found to have a statistically significant impact on practitioner's' laboratory testing of renal disease, following its introduction.\\
 
 \section{Method}
 Ensuring patient safety at all times drove all design decisions in the development of RenalQ. Compared to the clinician, RenalQ only ever has access to a subset of the total data for  a patient. Information that is not accessible to the application may well have a significant impact on the clinician's further management plans. Therefore, the clinician was to remain responsible for the final determination of further care of the patient.   The decision for the clinician to be the final arbitrator also acknowledges the possibility of error with an application like RenalQ during its development phase. \\
@@ -48,9 +48,9 @@ Considerable work was required to integrate the RenalQ' application into the lab
 Once the application was operationally ready for evaluation by primary care, ethical approval for the trial to proceed was then gained from the MidCentral and Central PHO clinical boards. \\
 
 \section{Evaluation}
-Pre-deployment the focus of evaluation was on the optimization of the interpretation engine. The laboratory provided a series of progressively larger cohorts of deidentified historic renal function results. RenalQ's and usual clinical analyses were compared o evaluate the potential of RenalQ and optimize its interpretation engine.  Initially, numerous improvements to the algorithm were required, particularly around the identification of acute renal impairment. \\
+Pre-deployment the focus of evaluation was on the optimization of the interpretation engine. The laboratory provided a series of progressively larger cohorts of deidentified historic renal function results. RenalQ's and usual clinical analyses were compared to evaluate the potential of RenalQ and optimize its interpretation engine.  Initially, numerous improvements to the algorithm were required, particularly around the identification of acute renal impairment. \\
 
-Once the algorithm was optimized, sensitivity was over 99\% specificity was over 98\%. This high level of sensitivity and specificity created problems. It was easy to slip into the trap during this phase of the evaluation that because RenalQ was usually accurate, it became the source of truth for evaluation. The question of RenalQ's accuracy became quickly begged! As a safeguard, the results of RenalQ were reviewed by the local renal physicians to ensure selectivity and specificity were progressively optimised. As a group, they were comfortable with the interpretations provided by RenalQ as being safe and appropriate for a pilot study. As part of the pilot studies, RenalQ's was evaluated qualitatively and quantitatively. \\
+Once the algorithm was optimized, sensitivity was over 99\% specificity was over 98\%. This high level of sensitivity and specificity created problems. It was easy to slip into the trap during this phase of the evaluation that because RenalQ was usually accurate, it became the source of truth for evaluation. The question of RenalQ's accuracy became quickly begged! As a safeguard, the results of RenalQ were reviewed by the local renal physicians to ensure selectivity and specificity were progressively optimised. As a group, they were comfortable with the interpretations provided by RenalQ as being safe and appropriate for a pilot study. As part of the pilot studies, RenalQ was evaluated qualitatively and quantitatively. \\
 
 \subsection{Qualitative results}
 A semi-structured interview instrument was selected as it allowed primary care staff to both reflect on their experiences with RenalQ and enabled them to provide in-depth feedback. In the "responsive interview" method, the emphasis is on the fact that the interviewer and interviewee are both people and that they form a relationship during the interview \citep{rubin2011qualitative}. Additionally, this method allows the research design to remain flexible meaning that if new information, or a new area of interest, is uncovered then the current interview, and subsequent interviews, can probe this area. \\
@@ -66,7 +66,7 @@ The reflection of General Practitioners that RenalQ was felt to save time was in
 In addition General Practitioners felt the RenalQ process could be applied to outpatient renal function tests from the hospital in addition to community requested samples. This anomaly is due the laboratory deeming all hospital samples to be taken from patients not in their steady state, not just those acutely unwell. General Practitioners also considered the statistical processes could be extended to other areas of laboratory result interpretation. \\
 
 \subsection{Quantitative results}
-On release of RenalQ into district wide pilot, utilization data became available. The principle measures analysised where the frequency of testing and the elpased time to the next test against the eGFR result.\\
+On release of RenalQ into district wide pilot, utilization data became available. The principle measures analysised where the frequency of testing and the elapsed time to the next test against the eGFR result.\\
 
 \begin{figure}[htp]
 \centering
@@ -115,7 +115,7 @@ The test has a $\chi^2$ value of 3175.89 (p=0, df=152) which means there is a ch
 
 It is difficult to see any growth in the number of tests being conducted for patients whose eGFR is between 60 and 90 (shown in blue) and above 90 (shown in green). The patient groups of greatest interest are those with eGFR between 30 and 60 (shown in orange) and between 15 and 30 (shown in red).\\
 
-In the following analysis, the data for 2013 has been added back in and we have evaluated every value of eGFR instead of grouped eGFR values.The next  model  used to identify the statistically significant factors affecting the time between successive renal function tests allows for only the level of renal function for each patient (as measured by their eGFR), and whether that test was analyzed using the RenalQ system. In addition, the combination of these two effects has also been incorporated in the model. The regression model for this model yields  the following summary of effects and their statistical significance. These show that there has been a statistically significant reduction in the time of next test for patients with serious renal impairment, of sufficent magnitude a logrithmic scale is required to visualise the effect.\\
+In the following analysis, the data for 2013 has been added back in and we have evaluated every value of eGFR instead of grouped eGFR values. The next  model  used to identify the statistically significant factors affecting the time between successive renal function tests allows for only the level of renal function for each patient (as measured by their eGFR), and whether that test was analyzed using the RenalQ system. In addition, the combination of these two effects has also been incorporated in the model. The regression model for this model yields  the following summary of effects and their statistical significance. These show that there has been a statistically significant reduction in the time of next test for patients with serious renal impairment; a logrithmic scale is required to visualise the effect due to the differing magnitudes for the grouped data.\\
 
 \begin{figure}[htp]
 \centering
@@ -124,16 +124,16 @@ In the following analysis, the data for 2013 has been added back in and we have 
 \label{}
 \end{figure}
 
-The pattern of change in time to next test is in accordance with our projections. We were expected the result of a decrease between tests for patients with serious renal impairment. The middle zone of mild renal impairment fulfilled our expectation of no change. Only time will tell if the expected increase in time between tests for those patients with mild or no renal impairment occurs. Given the time between tests in this group of patients is expected to be measured in years, it will be some time before if our hypothesis is confirmed. The clinical benefit of RenalQ is already established through the reduction or optimization between tests for those patients with moderate to severe renal impairment. Any financial benefit will only occur with reduction in testing frequency in thos with mild or no renal impairment.
+The pattern of change in time to next test is in accordance with our projections. We were expected the result of a decrease between tests for patients with serious renal impairment. The middle zone of mild renal impairment fulfilled our expectation of no change. Only time will tell if the expected increase in time between tests for those patients with mild or no renal impairment occurs. Given the time between tests in this group of patients is expected to be measured in years, it will be some time before our hypothesis is confirmed. The clinical benefit of RenalQ is already established through the reduction or optimization between tests for those patients with moderate to severe renal impairment. Any financial benefit will only occur with reduction in testing frequency in thos with mild or no renal impairment.
 
 \section{Conclusions}
-The management of laboratory results in general and renal function tests, in particular, are significant issues. The combination of an aging population and an increasing incidence of predisposing illness such as diabetes means renal disease will become even more important in the future. For the practitioner, renal function tests need to be interpreted within the patient's context. The same result will mean different things for different patients. With time frames measured in measured in months or years for chronic renal impairment, losing contextual awareness of the significance and interpretation of any one result in a busy practice borders on the inevitable. The consequences for both the patient and the affordability of health care is significant.\\
+The management of laboratory results in general and renal function tests, in particular, are significant issues. The combination of an aging population and an increasing incidence of predisposing illness such as diabetes means renal disease will become even more important in the future. For the practitioner, renal function tests need to be interpreted within the patient's context. The same result will mean different things for different patients. With time frames measured in months or years for chronic renal impairment, losing contextual awareness of the significance and interpretation of any one result in a busy practice borders on the inevitable. The consequences for both the patient and the affordability of health care is significant.\\
 
-RenalQ was developed to solve these issues, as characterised by the two case examples. Both of these cases were analysised by RenalQ. In both situations RenalQ was able to alert the clinician, earlier than existing human only processes. Considering the impact at the district wide level, RenalQ has statistically significantly reduced the time between tests for patients with moderate to severe renal impairment. RenalQ is therefore able to make an impact at the individual and district level. \\
+RenalQ was developed to solve these issues, as characterised by the two case examples. In both situations RenalQ was able to alert the clinician earlier than existing human-only processes. Considering the impact at the district wide level, RenalQ has statistically significantly reduced the time between tests for patients with moderate to severe renal impairment. RenalQ is therefore able to make an impact at the individual and district level. \\
 
 It could be argued that clinicians are ignoring the RenalQ analysis. So RenalQ might not be the causal agent for this dramatic change in behaviour coincidental with the release of the application into the "wild". The counter is that RenalQ provides individualized, situational assistance to the clinician at the point of decision-making, so creating an opportunity for patient to receive timely, appropriate care. This opportunity is independent of whether the clinician is in concordance with RenalQ or not. RenalQ flagged the patient's result as benefiting from clinician review. That is the success of RenalQ.  The application changes clinical outcomes by selectively focusing attention on where clinical attention is of most benefit to the patient.  Additionally in some situations, where the clinician interpreting the result might not be familiar with the patient or the clinical situation, RenalQ provides further assistance through suggestions. \\ 
 
-As an innovation methodology the development of RenalQ took only four years from conceptualization to being able to demonstrate statistically significant patient benefit. Typically the time frame for the successful implementation of effective innovation into clinical practice is 17 years \citep{morris2011answer}. Being the author's first project there was a steep learning. Equally having traversed the learning curve once, the next application should have an even shorter time frame than four years from conceptualization to delivering clinical benefits. \\
+As an innovation methodology the development of RenalQ took only four years from conceptualization to being able to demonstrate statistically significant patient benefit. Typically the time frame for the successful implementation of effective innovation into clinical practice is 17 years \citep{morris2011answer}. Being the author's first project there was a steep learning curve; having traversed the learning curve once, the next application should have an even shorter time frame than four years from conceptualization to delivering clinical benefits. \\
 
 Part of the success of this project was due to the use of the R statistical language \citep{rstat2013}. This powerful and effective language for data analysis leading to both insight and new products is a New Zealand success story. Developed by Ross Ihaka and Robert Gentleman from the University of Auckland and first released in 1994, R language now features in lists of the top ten languages used in the world. Almost unbelievably, R statistical language was developed and is maintained as an open source project that is free to use across multiple platforms. Given the explosion in the quantity of data collected, the need for smart use of resources but the development needs to occur within a tight fiscal envelope, R statistical language represents a compelling option for future developments. \\
 
