--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -33,7 +33,7 @@ Ensuring patient safety at all times drove all design decisions in the developme
 
 The decision was also made to adopt modern production methodology which has used statistical process control (SPC) as part of "production business management" \citep{rosemann2015six, cheng2015run, epprecht2015statistical}. Adoption of SPC enabled RenalQ to function at the necessary scale to operate within a DHB's laboratory services, and also to  be able to consider the individual patient's needs. In health SPC has already been used to study the operational function of emergency departments \citep{pimentel2015statistical} and the widest adoption of SPC in health has been within the field of quality improvement \citep{provost2011health}.\\
 
-the technical description of the application and its development is more fully described elsewhere \citep{GodfreyEtAl2014KidneyPaper}. In essence, RenalQ interprets the estimated Glomerular Filtration Rate (eGFR) result for each patient, within the context of their previous eGFR results. In the laboratory workflows, RenalQ is executed after the usual renal function tests. In any circumstances where it is inappropriate for the eGFR not to be calculated, RenalQ is not executed, such as for pregnant women or children. \\
+The technical description of the application and its development is more fully described elsewhere \citep{GodfreyEtAl2014KidneyPaper}. In essence, RenalQ interprets the estimated Glomerular Filtration Rate (eGFR) result for each patient, within the context of their previous eGFR results. In the laboratory workflows, RenalQ is executed after the usual renal function tests. In any circumstances where it is inappropriate for the eGFR not to be calculated, RenalQ is not executed, such as for pregnant women or children. \\
 
 The RenalQ interpretation engine consists of three layers depending on the number of eGFR results available within the laboratory database. If there are less than five results available, no specific advice is given by RenalQ. If there are five to nineteen  results available, the context of the latest eGFR result is interpreted by a set of fixed heuristic rules which encode current standard clinical practice. As a safeguard, any result returned by the application to the treating clinician would be clinically conservative, thus encouraging the  clinician to be proactive in their care of the patient. Patient safety was prioritized, but this meant accepting RenalQ might occasionally be unnecessarily alarmist in its interpretations. The third layer in the RenalQ interpretation engine was for patients where twenty  or more test results were available for SPC to provide an analysis. This third layer used control chart methodology, notably including a cumulative summation procedure to determine changes between the current eGFR result and previous results. From this result, RenalQ develops recommendations for the clinician.  
 
